fondo terminado parte1

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link ref="stylesheet" href="./css/estilo.css">
+  
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-  hola
+  <div id="container">
+  </div>
 </body>
 </html>
